--- a/mentors/freelancerls/layouts/realestate/styles/scss/_header.scss
+++ b/mentors/freelancerls/layouts/realestate/styles/scss/_header.scss
@@ -9,7 +9,7 @@
     min-height: 103px;
     padding: 30px 0;
     @media (max-width: 767.98px) {
-      background-color: #BDCCFF;
+      border-bottom: 1px solid #DEDFE1;
       min-height: 0;
       padding: 20px;
     }
